--- a/src/main/resources/com/example/taskfx/admin-view.fxml
+++ b/src/main/resources/com/example/taskfx/admin-view.fxml
@@ -1,11 +1,68 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.taskfx.controllerviews.AdminViewController">
+<AnchorPane prefHeight="518.0" prefWidth="619.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.taskfx.controllerviews.AdminViewController">
    <children>
-      <Label layoutX="181.0" layoutY="103.0" text="Admin" />
+
+      <VBox layoutX="5.0" layoutY="6.0" prefHeight="507.0" prefWidth="610.0">
+         <children>
+            <MenuBar>
+               <menus>
+                  <Menu fx:id="mnFile" mnemonicParsing="false" text="File">
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="Edit">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="Delete" />
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="Help">
+                     <items>
+                        <MenuItem mnemonicParsing="false" text="About" />
+                     </items>
+                  </Menu>
+               </menus>
+            </MenuBar>
+            <TabPane prefHeight="486.0" prefWidth="610.0" tabClosingPolicy="UNAVAILABLE">
+               <tabs>
+                  <Tab text="View Task">
+                     <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" onMouseClicked="#showNew" prefHeight="79.0" prefWidth="610.0">
+                           <children>
+                              <TableView fx:id="table" editable="true" layoutX="14.0" layoutY="14.0" prefHeight="280.0" prefWidth="451.0">
+                                 <columns>
+                                    <TableColumn fx:id="iduser" prefWidth="51.0" text="Id User" />
+                                    <TableColumn fx:id="username" prefWidth="194.0" text="Username" />
+                                    <TableColumn fx:id="rol" prefWidth="204.0" text="rol" />
+                                 </columns>
+                              </TableView>
+                              <Button layoutX="27.0" layoutY="318.0" mnemonicParsing="false" onAction="#traerdatos" text="Refresh Table" />
+                              <TextField fx:id="txtUsername" layoutX="473.0" layoutY="48.0" prefHeight="25.0" prefWidth="94.0" promptText="Username" />
+                              <TextField fx:id="txtPassword" layoutX="475.0" layoutY="112.0" prefHeight="25.0" prefWidth="93.0" promptText="Password" />
+                              <Label layoutX="485.0" layoutY="31.0" prefHeight="17.0" prefWidth="69.0" text="Username" />
+                              <Label layoutX="493.0" layoutY="86.0" text="Password" />
+                              <Label layoutX="509.0" layoutY="154.0" text="Rol" />
+                              <Button fx:id="bttnNew" layoutX="475.0" layoutY="256.0" mnemonicParsing="false" onAction="#agregarAtabla" prefHeight="25.0" prefWidth="96.0" text="New" />
+                              <Button fx:id="btnedit" layoutX="475.0" layoutY="306.0" mnemonicParsing="false" onAction="#btneditTask" prefHeight="25.0" prefWidth="95.0" text="Edit" visible="false" />
+                              <Button fx:id="btnDelete" layoutX="542.0" layoutY="349.0" mnemonicParsing="false" onAction="#btnBorrar" text="Delete" visible="false" />
+                              <TextField fx:id="txtRolInt" layoutX="472.0" layoutY="179.0" prefHeight="25.0" prefWidth="93.0" promptText="Rol(Num)" />
+                           </children></AnchorPane>
+                     </content>
+                  </Tab>
+               </tabs>
+            </TabPane>
+         </children>
+      </VBox>
    </children>
 </AnchorPane>
