--- a/src/main/resources/com/example/taskfx/admin-view.fxml
+++ b/src/main/resources/com/example/taskfx/admin-view.fxml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TableColumn?>
@@ -48,15 +50,17 @@
                                  </columns>
                               </TableView>
                               <Button layoutX="27.0" layoutY="318.0" mnemonicParsing="false" onAction="#traerdatos" text="Refresh Table" />
-                              <TextField fx:id="txtUsername" layoutX="473.0" layoutY="48.0" prefHeight="25.0" prefWidth="94.0" promptText="Username" />
-                              <TextField fx:id="txtPassword" layoutX="475.0" layoutY="112.0" prefHeight="25.0" prefWidth="93.0" promptText="Password" />
-                              <Label layoutX="485.0" layoutY="31.0" prefHeight="17.0" prefWidth="69.0" text="Username" />
-                              <Label layoutX="493.0" layoutY="86.0" text="Password" />
-                              <Label layoutX="509.0" layoutY="154.0" text="Rol" />
+                              <TextField fx:id="txtUsername" layoutX="477.0" layoutY="48.0" prefHeight="25.0" prefWidth="101.0" promptText="Username" />
+                              <Label layoutX="490.0" layoutY="22.0" prefHeight="17.0" prefWidth="69.0" text="Username" />
+                              <Label layoutX="493.0" layoutY="79.0" text="Password" />
+                              <Label layoutX="509.0" layoutY="178.0" text="Rol" />
                               <Button fx:id="bttnNew" layoutX="475.0" layoutY="256.0" mnemonicParsing="false" onAction="#agregarAtabla" prefHeight="25.0" prefWidth="96.0" text="New" />
                               <Button fx:id="btnedit" layoutX="475.0" layoutY="306.0" mnemonicParsing="false" onAction="#btneditTask" prefHeight="25.0" prefWidth="95.0" text="Edit" visible="false" />
                               <Button fx:id="btnDelete" layoutX="542.0" layoutY="349.0" mnemonicParsing="false" onAction="#btnBorrar" text="Delete" visible="false" />
-                              <TextField fx:id="txtRolInt" layoutX="472.0" layoutY="179.0" prefHeight="25.0" prefWidth="93.0" promptText="Rol(Num)" />
+                              <PasswordField fx:id="txtPassword" layoutX="477.0" layoutY="103.0" prefHeight="25.0" prefWidth="101.0" promptText="Password" />
+                              <PasswordField fx:id="txtPassword1" layoutX="477.0" layoutY="142.0" prefHeight="25.0" prefWidth="101.0" promptText="RepeatPass" />
+                              <Label fx:id="lblmsg" layoutX="298.0" layoutY="318.0" prefHeight="25.0" prefWidth="139.0" />
+                              <ComboBox fx:id="cmbRol" layoutX="472.0" layoutY="202.0" prefHeight="25.0" prefWidth="105.0" promptText="Choose Rol" />
                            </children></AnchorPane>
                      </content>
                   </Tab>
